git and DAY 12, DAY13

--- a/DAY 13/DAY_13.html
+++ b/DAY 13/DAY_13.html
@@ -5,7 +5,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flexbox</title>
-    <link rel="stylesheet" href="layout.css" />
+    <link rel="stylesheet" href="grid.css" />
   </head>
   <body>
     <div class="container">
@@ -15,6 +15,9 @@
       <div class="BOX ORANGE">ORANGE</div>
       <div class="BOX BROWN">BROWN</div>
       <div class="BOX MAGNETA">MAGNETA</div>
+      <div class="BOX CYAN">CYAN</div>
+      <div class="BOX BLACK">BLACK</div>
+      <div class="BOX TEAL">TEAL</div>
       <div class="BOX CYAN">CYAN</div>
       <div class="BOX BLACK">BLACK</div>
       <div class="BOX TEAL">TEAL</div>
