--- a/DAY 13/pricetable.html
+++ b/DAY 13/pricetable.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,100&display=swap"
       rel="stylesheet"
     />
+    
     <title>Document</title>
   </head>
   <body>
@@ -21,11 +22,12 @@
         </div>
         <div class="prize">
           <div class="a">Pricing</div>
-          <div class="c">₹</div>
           <div class="bc">
+            <div class="c">₹</div>
+            <div class="d">/month*</div>
             <div class="b">79</div>
-            <div class="d">\month*</div>
           </div>
+
           <div>₹1̶9̶9̶m̶o̶n̶t̶h̶</div>
         </div>
         <div class="but">
@@ -223,11 +225,12 @@
         </div>
         <div class="prize">
           <div class="a">Pricing</div>
-          <div class="c">₹</div>
           <div class="bc">
+            <div class="c">₹</div>
+            <div class="d">/month*</div>
             <div class="b">199</div>
-            <div class="d">\month*</div>
           </div>
+
           <div><del>₹399\month</del></div>
         </div>
         <div class="but">
