git DAY 13, DAY 14

--- a/DAY 13/DAY_13.html
+++ b/DAY 13/DAY_13.html
@@ -18,10 +18,10 @@
       <div class="BOX CYAN">CYAN</div>
       <div class="BOX BLACK">BLACK</div>
       <div class="BOX TEAL">TEAL</div>
-      <div class="BOX CYAN">CYAN</div>
-      <div class="BOX BLACK">BLACK</div>
-      <div class="BOX TEAL">TEAL</div>
-      
+      <div class="BOX B">BLUE</div>
+      <div class="BOX O">ORANGE</div>
+      <div class="BOX G">BROWN</div>
+      <div class="BOX M">MAGNETA</div>
     </div>
   </body>
 </html>
